--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
 <div class="container">    
 <div class= "p1"> 
-    <img id="img1" src="../images/me1.jpg" alt="Noah Kaplan">
+    <img id="img1" src="..me1.jpg" alt="Noah Kaplan">
 <div class="h11">
     <h1>Noah Alexander Kaplan</h1>
 <ul>
